--- a/css/header.css
+++ b/css/header.css
@@ -98,8 +98,8 @@ a{
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     padding-top: 60px;
-    }
-    .card-container{
+}
+.card-container{
     width: 200px;
     height: 270px;
     background: #FFF;
@@ -112,33 +112,33 @@ a{
     overflow: hidden;
     display: inline-block;
     z-index: 1000;
-                    }
-    .upper-container{
+}
+.upper-container{
     height: 100px;
     background: #ffb4b4;
-    }
-    .image-container{
+}
+.image-container{
     background: white;
     width: 80px;
     height: 80px;
     border-radius: 50%;
     /* padding: 5px; */
     transform: translate(60px,55px);
-    }
-    .image-container img{
+}
+.image-container img{
     width: 80px;
     height: 80px;
     border-radius: 50%;
     border: 5px solid white;
     box-shadow: 0px 1px 10px .5px #000;
-    }
-    .lower-container{
+}
+.lower-container{
     height: 280px;
     background: #FFF;
     padding: 20px;
     padding-top: 40px;
     text-align: center;
-    }
+}
     /* .lower-container h4{
         color: gray;
         opacity: .6;
@@ -149,7 +149,7 @@ a{
     color: gray;
     margin-bottom: 30px;
     } */
-    .lower-container .btn{
+.lower-container .btn{
     padding: 12px 20px;
     background: #ffb4b4;
     border: none;
@@ -159,13 +159,30 @@ a{
     text-decoration: none;
     font-weight: bold;
     transition: all .3s ease-in;
-    }
-    .lower-container .btn:hover{
+}
+.lower-container .btn:hover{
     background: transparent;
     color: #ffb4b4;
     border: 2px solid #ffb4b4;
-    }
+}
+.chat-person {
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #ff523b;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
     
+.chat-person:hover {
+background-color: #555;
+}
     
     
     
