--- a/css/index.css
+++ b/css/index.css
@@ -113,6 +113,28 @@ a{
     background-color: #555;
     transform: translateY(-5px);
   }
+
+/* Chat */
+.chat-person {
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #ff523b;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+    
+.chat-person:hover {
+background-color: #555;
+}
+   
+
 /* root container class is used in multiple places */
 .container{
     max-width: 1100px;
