--- a/css/addtocart.css
+++ b/css/addtocart.css
@@ -62,6 +62,7 @@ td img{
     width: 80px;
     height: 80px;
     margin-right: 10px;
+    object-fit: contain;
 }
 .total-price{
     display: flex;
