--- a/css/index.css
+++ b/css/index.css
@@ -302,11 +302,41 @@ small{
 .col-5 img:hover{
     filter: grayscale(0);
 }
+/* Product Modal */
+.product_modal {
+    position: fixed; /* Stay in place */
+    z-index: 100; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+     /* Enable scroll if needed */
+    padding-top: 60px;
+    /* overflow: auto; */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+
 
 /* Uero profile */
-
-
-
 			/* Modal */
 
 
@@ -429,7 +459,10 @@ border: 2px solid #ffb4b4;
         background: transparent;
         color: #ffb4b4;
         border: 2px solid #ffb4b4;
-        }
+    }
+    .product_modal{
+        overflow: auto;
+    }
 }
 
 /* @media Query for responsiveness less than 600screen size */
@@ -450,5 +483,8 @@ border: 2px solid #ffb4b4;
         background: transparent;
         color: #ffb4b4;
         border: 2px solid #ffb4b4;
-        }
+    }
+    .product_modal{
+        overflow: auto;
+    }
 }
