--- a/css/checkout.css
+++ b/css/checkout.css
@@ -16,14 +16,14 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 15px;
-    background: lightgrey;
+    /* background: lightgrey; */
     border-radius: 10px;
 }
 .col-3
 {
     flex-basis: 35%;
     padding: 15px;
-    background: lightgrey;
+    /* background: lightgrey; */
     border-radius: 10px;
 }
 input{
