--- a/css/allproduct.css
+++ b/css/allproduct.css
@@ -97,3 +97,95 @@ a{
     background-color: #ff523b;
     color: #fff;
 }
+
+
+
+
+/* Popup modal css */
+
+.col-2{
+    flex-basis: 50%;
+    min-width: 300px;
+}
+.col-2 img{
+    max-width: 85%;
+    padding: 50px 0;
+}
+.col-2 h1{
+    font-size: 40px;
+    line-height: 50px;
+    margin: 25px 0;
+}
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+.product_modal {
+    position: fixed; /* Stay in place */
+    z-index: 100; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+     /* Enable scroll if needed */
+    padding-top: 60px;
+    /* overflow: auto; */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+}
+
+
+
+/* @media Query for responsiveness */
+@media only screen and (max-width: 800px){
+
+    .modal{
+        display: none;
+    }
+    .card-container{
+        transform: translate(-75%,-70%);
+    }
+    .lower-container .btn:hover{
+        background: transparent;
+        color: #ffb4b4;
+        border: 2px solid #ffb4b4;
+    }
+    .product_modal{
+        overflow: auto;
+    }
+}
+
+/* @media Query for responsiveness less than 600screen size */
+@media only screen and (max-width: 600px){
+    .row{
+        text-align: center;
+    }
+    .col-2, .col-3, .col-4{
+        flex-basis: 100%;
+    }
+    .modal{
+        display: none;
+    }
+    .card-container{
+        transform: translate(-75%,-70%);
+    }
+    .lower-container .btn:hover{
+        background: transparent;
+        color: #ffb4b4;
+        border: 2px solid #ffb4b4;
+    }
+    .product_modal{
+        overflow: auto;
+    }
+}
