--- a/css/header.css
+++ b/css/header.css
@@ -81,6 +81,12 @@ a{
     /* background: radial-gradient(#fff,#ffd6d6); */
     background: #ffd6d6;
 }
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
 .container{
     max-width: 1100px;
     margin: auto;
