--- a/css/header.css
+++ b/css/header.css
@@ -94,18 +94,18 @@ a{
     padding-right: 25px;
 }
 
-.modal {
+/* .modal {
     display: none;  
-    position: fixed; /* Stay in place */
-    z-index: 100; /* Sit on top */
+    position: fixed; 
+    z-index: 100; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
     padding-top: 60px;
-}
-.card-container{
+} */
+/* .card-container{
     width: 200px;
     height: 270px;
     background: #FFF;
@@ -128,7 +128,6 @@ a{
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    /* padding: 5px; */
     transform: translate(60px,55px);
 }
 .image-container img{
@@ -144,7 +143,7 @@ a{
     padding: 20px;
     padding-top: 40px;
     text-align: center;
-}
+} */
     /* .lower-container h4{
         color: gray;
         opacity: .6;
@@ -155,7 +154,7 @@ a{
     color: gray;
     margin-bottom: 30px;
     } */
-.lower-container .btn{
+/* .lower-container .btn{
     padding: 12px 20px;
     background: #ffb4b4;
     border: none;
@@ -170,7 +169,7 @@ a{
     background: transparent;
     color: #ffb4b4;
     border: 2px solid #ffb4b4;
-}
+} */
 .chat-person {
     position: fixed;
     bottom: 20px;
