--- a/css/index.css
+++ b/css/index.css
@@ -113,28 +113,6 @@ a{
     background-color: #555;
     transform: translateY(-5px);
   }
-
-/* Chat */
-.chat-person {
-    position: fixed;
-    bottom: 20px;
-    left: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: #ff523b;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-}
-    
-.chat-person:hover {
-background-color: #555;
-}
-   
-
 /* root container class is used in multiple places */
 .container{
     max-width: 1100px;
@@ -340,15 +318,15 @@ small{
 			/* Modal */
 
 
-.modal {
+/* .modal {
 display: none;  
-position: fixed; /* Stay in place */
-z-index: 100; /* Sit on top */
+position: fixed;
+z-index: 100; 
 left: 0;
 top: 0;
-width: 100%; /* Full width */
-height: 100%; /* Full height */
-overflow: auto; /* Enable scroll if needed */
+width: 100%;
+height: 100%; 
+overflow: auto; 
 padding-top: 60px;
 }
 .card-container{
@@ -374,7 +352,6 @@ background: white;
 width: 80px;
 height: 80px;
 border-radius: 50%;
-/* padding: 5px; */
 transform: translate(60px,55px);
 }
 .image-container img{
@@ -391,16 +368,16 @@ padding: 20px;
 padding-top: 40px;
 text-align: center;
 }
-/* .lower-container h4{
-	color: gray;
-	opacity: .6;
-	font-weight: bold;
-	} */
-/* .lower-container p{
+.lower-container h4{
+color: gray;
+opacity: .6;
+font-weight: bold;
+} 
+.lower-container p{
 font-size: 16px;
 color: gray;
 margin-bottom: 30px;
-} */
+} 
 .lower-container .btn{
 padding: 12px 20px;
 background: #ffb4b4;
@@ -416,9 +393,27 @@ transition: all .3s ease-in;
 background: transparent;
 color: #ffb4b4;
 border: 2px solid #ffb4b4;
+} */
+
+/* Chat */
+.chat-person {
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 9;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #ff523b;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
 }
-
-
+    
+.chat-person:hover {
+background-color: #555;
+}
 
 
 
