--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    scroll-behavior: smooth;
+}
 .header{
     background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.rehmantravel.com%2Fpakistantours%2F&psig=AOvVaw20qmuLpZCChQLrKIiHZX-l&ust=1631724200554000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPidg730_vICFQAAAAAdAAAAABAD);
 }
