--- a/css/about.css
+++ b/css/about.css
@@ -4,6 +4,21 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+::-webkit-scrollbar{
+    width: 6px;
+}
+/* ::-webkit-scrollbar-track{
+    border-radius: 5px;
+    box-shadow:inset 0 0 10px rgba(0,0,0,0.25)
+}  */
+::-webkit-scrollbar-thumb{
+    border-radius: 5px;
+    background: rgb(189, 189, 189);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: #ff523b;
+}
 /* Contact Page */
 .about-page{
     padding: 230px 0;
