--- a/css/account.css
+++ b/css/account.css
@@ -4,7 +4,23 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}.container{
+}
+::-webkit-scrollbar{
+    width: 6px;
+}
+/* ::-webkit-scrollbar-track{
+    border-radius: 5px;
+    box-shadow:inset 0 0 10px rgba(0,0,0,0.25)
+}  */
+::-webkit-scrollbar-thumb{
+    border-radius: 5px;
+    background: rgb(189, 189, 189);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: #ff523b;
+}
+.container{
     max-width: 1100px;
     margin: auto;
     padding-left: 25px;
