--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,20 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body{
-    scroll-behavior: smooth;
+::-webkit-scrollbar{
+    width: 6px;
+}
+/* ::-webkit-scrollbar-track{
+    border-radius: 5px;
+    box-shadow:inset 0 0 10px rgba(0,0,0,0.25)
+}  */
+::-webkit-scrollbar-thumb{
+    border-radius: 5px;
+    background: rgb(189, 189, 189);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: #ff523b;
 }
 .header{
     background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.rehmantravel.com%2Fpakistantours%2F&psig=AOvVaw20qmuLpZCChQLrKIiHZX-l&ust=1631724200554000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPidg730_vICFQAAAAAdAAAAABAD);
@@ -87,6 +99,7 @@ a{
     background: #ffb4b4;
 }
 .logout_btn a{
+    border: none;
     color: red;
 }
 /* Navigation Bar below text and image*/
@@ -144,6 +157,7 @@ a{
     margin: 25px 0;
 }
 .btn{
+    border: none;
     display: inline-block;
     background: #ff523b;
     color: #fff;
