--- a/css/index.css
+++ b/css/index.css
@@ -255,14 +255,17 @@ small{
 .testtimonial .col-3{
     text-align: center;
     padding: 40px 20px;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1); */
     cursor: pointer;
     transition: transform 0.5s;
 }
 .testtimonial .col-3 img{
-    width: 50px;
-    margin-top: 20px;
+    /* width: 50px; */
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 50%;
+    
 }
 .testtimonial .col-3:hover{
     transform: translateY(-10px);
@@ -328,6 +331,10 @@ small{
     cursor: pointer;
   }
 
+.owl-nav{
+    text-align: center;
+    font-size: 25px;
+}
 
 
 
