--- a/css/allproduct.css
+++ b/css/allproduct.css
@@ -81,6 +81,7 @@ h4{
     padding : 8px 30px;
     margin: 30px 0 ;
     border-radius: 30px;
+    border: none;
     transition: background 0.5s;
 }
 .btn:hover{
