--- a/css/checkout.css
+++ b/css/checkout.css
@@ -148,7 +148,7 @@ tbody tr:hover{
     .row{
         text-align: center;
     }
-    .col-2, .col-3, .col-4{
+    .col-2, .col-3{
         flex-basis: 100%;
     }
     .modal{
