--- a/css/popupform.css
+++ b/css/popupform.css
@@ -9,9 +9,13 @@
     top:50%;
     left:50%;
     transform:translate(-50%,-50%);
-    width:300px;
-    background:#f5f5f5;
-    box-shadow:5px 5px 10px 5px #ccc;
+    width:50%;
+    background:#fff;
+    z-index: 100;
+    /* box-shadow:5px 5px 10px 5px #ccc; */
+  }
+  .nonvisible{
+    display: none;
   }
   .form .tab-header {
     height:50px;
@@ -26,7 +30,7 @@
     cursor:pointer;
   }
   .form .tab-header > div.active {
-    background:#f5f5f5;
+    background:#fff;
     color:#111;
   }
   .form .tab-content {
@@ -40,7 +44,7 @@
     padding:10px;
     border:1px solid #aaa;
     font-size:16px;
-    background:#f5f5f5;
+    background:#fff;
     border-radius:5px;
     outline:none;
   }
@@ -58,8 +62,8 @@
     padding:10px;
     border:none;
     outline:none;
-    background:#00acee;
-    color:#f5f5f5;
+    background:#ffa4a4;
+    color:#fff;
     font-size:16px;
     text-transform:uppercase;
     cursor:pointer;
