--- a/css/profilepage.css
+++ b/css/profilepage.css
@@ -26,6 +26,8 @@
     height: 300px;
     /* overflow: auto; */
     overflow-x:auto;
+    display: flex;
+    justify-content: center;
 }
 table{
     border-collapse: collapse;
