--- a/css/modal.css
+++ b/css/modal.css
@@ -18,7 +18,7 @@
 }
 /* The Modal (background) */
 .modal {
-    display: block; /* Hidden by default */
+    display: block;
     position: fixed; /* Stay in place */
     z-index: 100; /* Sit on top */
     left: 0;
@@ -28,7 +28,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
+    /* padding-top: 2px; */
   }
   /* The Close Button */
 .close {
@@ -52,7 +52,7 @@
     text-align: center;
     background: #fff;
     width: 100%;
-    height: 450px;
+    height: 550px;
     position: relative;
     padding: 20px 0 ;
     margin: auto;
@@ -83,6 +83,10 @@ form input{
     margin: 10px 0 ;
     padding: 0 10px;
     border: 1px solid #ccc;
+}
+p{
+    float: left;
+    font-size: 14px;
 }
 #showpassword{
     padding: 0;
