--- a/css/header.css
+++ b/css/header.css
@@ -97,6 +97,20 @@ p{
     padding-left: 25px;
     padding-right: 25px;
 }
+.close {
+    color: #aaaaaa;
+    float: right;
+    margin-right: 20px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 /* .modal {
     display: none;  
