--- a/css/index.css
+++ b/css/index.css
@@ -324,7 +324,8 @@ small{
 .close {
     color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    margin-right: 20px;
+    font-size: 20px;
     font-weight: bold;
   }
   
