--- a/css/profilepage.css
+++ b/css/profilepage.css
@@ -6,6 +6,7 @@
 }
 ::-webkit-scrollbar{
     width: 6px;
+    height: 6px;
 }
 /* ::-webkit-scrollbar-track{
     border-radius: 5px;
@@ -32,7 +33,9 @@
 table{
     border-collapse: collapse;
 }
+
 thead th{
+    text-align: center;
     position: sticky;
     top: 0;
     background: #ff523b;
